--- a/index.html
+++ b/index.html
@@ -3,17 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hashitha ✨</title>
+  <title>For Hashitha 💕</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <div class="container">
-    <h1 class="title"><span>Hashitha</span>, this is for you ✨</h1>
-    <p class="subtitle">welcome to my little corner of the internet</p>
-    <button class="btn">say hi 👋</button>
+    <h1 class="title">Hashitha ✨</h1>
+    <p class="subtitle">this is for you, always</p>
+    <button class="btn">open letter 💌</button>
+  </div>
+
+  <!-- POPUP -->
+  <div class="overlay" id="overlay">
+    <div class="letter">
+      <p>
+        Hey Hashitha 💕<br><br>
+
+        I just wanted to take a moment to say this —  
+        I’m genuinely so grateful for you 💗<br><br>
+
+        Your presence, your energy, the way you exist  
+        makes things feel lighter, warmer, better ✨<br><br>
+
+        You have no idea how much love you bring  
+        just by being you 🫶<br><br>
+
+        I admire you, I care about you,  
+        and I appreciate you more than words can say 💋<br><br>
+
+        This wasn’t random.  
+        This was made with intention,  
+        with love, and with a full heart 💖<br><br>
+
+        Always cheering for you,  
+        always grateful for you 💞
+      </p>
+
+      <button class="close">close 💗</button>
+    </div>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
