final clean version

--- a/index.html
+++ b/index.html
@@ -45,6 +45,59 @@
   </div>
 
   <script src="script.js"></script>
+  <!-- FLIP CARDS SECTION -->
+<section class="cards-section">
+  <h2>Some Special Cards For You ✨</h2>
+  <p class="cards-sub">Tap any card to reveal a message 💕</p>
+
+  <div class="cards">
+    <!-- CARD 1 -->
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="card1.jpg" alt="card one">
+        </div>
+        <div class="card-back">
+          <p>
+            You make everything feel softer and warmer 💗  
+            I’m endlessly grateful for you.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- CARD 2 -->
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="card2.jpg" alt="card two">
+        </div>
+        <div class="card-back">
+          <p>
+            Loving you feels natural, calm, and real 💕  
+            I appreciate you more than you know.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- CARD 3 -->
+    <div class="card">
+      <div class="card-inner">
+        <div class="card-front">
+          <img src="card3.jpg" alt="card three">
+        </div>
+        <div class="card-back">
+          <p>
+            No matter what, I’m thankful  
+            that you’re part of my world 💋
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <p class="tap-hint">Start by tapping any card above ✨</p>
+</section>
 </body>
 </html>
-
